--- a/apps/flight-app/src/app/flights/pages/flight-home/flight-home-page.component.html
+++ b/apps/flight-app/src/app/flights/pages/flight-home/flight-home-page.component.html
@@ -1,3 +1,5 @@
 <breadcrumb></breadcrumb>
 
-<feature-flight-search (editClicked)="onEditClicked($event)"></feature-flight-search>
+<feature-flight-search
+  (editClicked)="onEditClicked($event)"
+></feature-flight-search>
