--- a/apps/flight-app/src/app/home/features/top-5-flights/top5-flights.component.html
+++ b/apps/flight-app/src/app/home/features/top-5-flights/top5-flights.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="background-color: #BBB">
+<div class="card" style="background-color: #bbb">
   <div class="header">
     <h2 class="title">Top 5 flights</h2>
     <div class="content"></div>
