--- a/apps/flight-app/src/app/passengers/pages/passenger-home/passenger-home-page.component.html
+++ b/apps/flight-app/src/app/passengers/pages/passenger-home/passenger-home-page.component.html
@@ -1,3 +1,5 @@
 <breadcrumb></breadcrumb>
 
-<feature-passenger-search (editClicked)="onEditClicked($event)"></feature-passenger-search>
+<feature-passenger-search
+  (editClicked)="onEditClicked($event)"
+></feature-passenger-search>
