--- a/apps/flight-app/src/app/flights/ui/flight-card/flight-card.component.html
+++ b/apps/flight-app/src/app/flights/ui/flight-card/flight-card.component.html
@@ -1,7 +1,4 @@
-<div
-  *ngIf="item"
-  class="card"
->
+<div *ngIf="item" class="card">
   <div class="header">
     <h2 class="title">{{ item.from }} - {{ item.to }}</h2>
   </div>
@@ -10,12 +7,7 @@
     <p>Date: {{ item.date | date: 'long' }}</p>
 
     <p *ngIf="editable">
-      <a
-        class="btn btn-default"
-        (click)="onEditClicked()"
-      >
-        Edit
-      </a>
+      <a class="btn btn-default" (click)="onEditClicked()"> Edit </a>
     </p>
   </div>
 </div>
