chore: fixed prefixes and added build target defaults

--- a/apps/flight-app/src/app/flights/features/flight-search/flight-search.component.html
+++ b/apps/flight-app/src/app/flights/features/flight-search/flight-search.component.html
@@ -25,9 +25,9 @@
     </div>
   </div>
 
-  <flight-card-list
+  <ui-flight-card-list
     [flights]="flights!"
     [editable]="true"
     (editClicked)="onEditClicked($event)"
-  ></flight-card-list>
+  ></ui-flight-card-list>
 </ng-container>
