--- a/apps/flight-app/src/app/home/features/top-5-flights/top5-flights.component.html
+++ b/apps/flight-app/src/app/home/features/top-5-flights/top5-flights.component.html
@@ -5,4 +5,4 @@
   </div>
 </div>
 
-<flight-card-list [flights]="(flights$ | async)!"></flight-card-list>
+<ui-flight-card-list [flights]="(flights$ | async)!"></ui-flight-card-list>
