--- a/apps/flight-app/src/app/home/features/top-5-passengers/top5-passengers.component.html
+++ b/apps/flight-app/src/app/home/features/top-5-passengers/top5-passengers.component.html
@@ -5,4 +5,4 @@
   </div>
 </div>
 
-<passenger-table [passengers]="(passengers$ | async)!"></passenger-table>
+<ui-passenger-table [passengers]="(passengers$ | async)!"></ui-passenger-table>
