--- a/apps/flight-app/src/app/home/pages/home/home-page.component.html
+++ b/apps/flight-app/src/app/home/pages/home/home-page.component.html
@@ -1,5 +1,5 @@
-<breadcrumb></breadcrumb>
+<ui-breadcrumb></ui-breadcrumb>
 
-<top5-flights></top5-flights>
+<feature-top5-flights></feature-top5-flights>
 
-<top5-passengers></top5-passengers>
+<feature-top5-passengers></feature-top5-passengers>
