--- a/apps/flight-app/src/app/passengers/features/passenger-search/passenger-search.component.html
+++ b/apps/flight-app/src/app/passengers/features/passenger-search/passenger-search.component.html
@@ -29,9 +29,9 @@
     </div>
   </div>
 
-  <passenger-table
+  <ui-passenger-table
     [editable]="true"
     [passengers]="passengers!"
     (editClicked)="onEditClicked($event)"
-  ></passenger-table>
+  ></ui-passenger-table>
 </ng-container>
