--- a/apps/flight-app/src/app/flights/ui/flight-card-list/flight-card-list.component.html
+++ b/apps/flight-app/src/app/flights/ui/flight-card-list/flight-card-list.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div *ngFor="let flight of flights">
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-      <flight-card
+      <ui-flight-card
         [item]="flight"
         [editable]="editable"
         (editClicked)="onEditClicked($event)"
       >
-      </flight-card>
+      </ui-flight-card>
     </div>
   </div>
 </div>
