chore: flight domain fully implemented

--- a/libs/flight/pages/page-flight-home/_index/flight-home.page.component.html
+++ b/libs/flight/pages/page-flight-home/_index/flight-home.page.component.html
@@ -1,1 +1,5 @@
-page-flight-home works!
+<ui-breadcrumb></ui-breadcrumb>
+
+<feature-flight-search
+  (editClicked)="onEditClicked($event)"
+></feature-flight-search>
