--- a/apps/flight-app/src/app/home/pages/home/home-page.component.html
+++ b/apps/flight-app/src/app/home/pages/home/home-page.component.html
@@ -1,5 +1,5 @@
 <ui-breadcrumb></ui-breadcrumb>
 
-<feature-top5-flights></feature-top5-flights>
+<feature-top-five-flights></feature-top-five-flights>
 
-<feature-top5-passengers></feature-top5-passengers>
+<feature-top-five-passengers></feature-top-five-passengers>
