--- a/libs/home/pages/page-home/_index/home.page.component.html
+++ b/libs/home/pages/page-home/_index/home.page.component.html
@@ -1,3 +1,5 @@
 <ui-breadcrumb></ui-breadcrumb>
 
 <feature-top-five-flights></feature-top-five-flights>
+
+<feature-top-five-passengers></feature-top-five-passengers>
