chore: added dynamic module federation support

--- a/apps/flight-app/src/app/sidebar/sidebar.component.html
+++ b/apps/flight-app/src/app/sidebar/sidebar.component.html
@@ -29,11 +29,11 @@
       </a>
     </li>
 
-    <!--    <li routerLinkActive="active">-->
-    <!--      <a routerLink="airports">-->
-    <!--        <i class="ti-signal"></i>-->
-    <!--        <p>Airports</p>-->
-    <!--      </a>-->
-    <!--    </li>-->
+    <li routerLinkActive="active">
+      <a routerLink="airports">
+        <i class="ti-signal"></i>
+        <p>Airports</p>
+      </a>
+    </li>
   </ul>
 </div>
